add anchor link to footer Quick links block

--- a/index.html
+++ b/index.html
@@ -74,23 +74,27 @@
         <!--/.header__top-->
         <!--nav menu-->
         <nav class="nav__bar">
-          <ul
-            class="nav__menu"
-          >
-            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+          <ul class="nav__menu">
             <li class="nav__item">
-              <a href="#" class="nav__link">Services</a>
+              <a href="index.html" class="nav__link">Home</a>
             </li>
-            <li class="nav__item"><a href="#" class="nav__link">Gallery</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">Team</a></li>
             <li class="nav__item">
-              <a href="#" class="nav__link">Contact Us</a>
+              <a href="src/about.html" class="nav__link">About</a>
+            </li>
+            <li class="nav__item">
+              <a href="src/services.html" class="nav__link">Services</a>
+            </li>
+            <li class="nav__item">
+              <a href="src/gallery.html" class="nav__link">Gallery</a>
+            </li>
+            <li class="nav__item">
+              <a href="src/team.html" class="nav__link">Team</a>
+            </li>
+            <li class="nav__item">
+              <a href="src/contact.html" class="nav__link">Contact Us</a>
             </li>
           </ul>
-          <ul
-            class="social__menu"
-          >
+          <ul class="social__menu">
             <li class="social__item">
               <a href="#" class="social__link" target="_blank"
                 ><i class="fab fa-facebook-f"></i
@@ -144,7 +148,7 @@
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium.
               </h2>
-              <a href="" class="btn">read more</a>
+              <a href="src/about.html" class="btn">read more</a>
             </div>
           </div>
         </div>
@@ -287,33 +291,25 @@
     >
       <div class="container">
         <div class="feature__content">
-          <div
-            class="feature__colum"
-          >
+          <div class="feature__colum">
             <i class="fas fa-laptop-medical"></i>
             <h5 class="feature__count">1000</h5>
             <span></span>
             <p class="text__center">Happy<br />Customers</p>
           </div>
-          <div
-            class="feature__colum"
-          >
+          <div class="feature__colum">
             <i class="fas fa-heartbeat"></i>
             <h5 class="feature__count">2020</h5>
             <span></span>
             <p class="text__center">Top<br />Hospitality</p>
           </div>
-          <div
-            class="feature__colum"
-          >
+          <div class="feature__colum">
             <i class="fas fa-helicopter"></i>
             <h5 class="feature__count">1028</h5>
             <span></span>
             <p class="text__center">Innovative<br />Approach</p>
           </div>
-          <div
-            class="feature__colum"
-          >
+          <div class="feature__colum">
             <i class="far fa-list-alt"></i>
             <h5 class="feature__count">835</h5>
             <span></span>
@@ -592,49 +588,67 @@
           </div>
           <!--/.section__header-->
           <div class="gallery__content">
-            <a href="img/gallery/1_item.jpg" class="zoomOutt" data-lightbox="roadtrip"
+            <a
+              href="img/gallery/1_item.jpg"
+              class="zoomOutt"
+              data-lightbox="roadtrip"
               ><img
                 src="img/gallery/1_item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/2_item.jpg" class="zoomOutt" data-lightbox="roadtrip"
+            <a
+              href="img/gallery/2_item.jpg"
+              class="zoomOutt"
+              data-lightbox="roadtrip"
               ><img
                 src="img/gallery/2_item.jpg"
                 alt="medicine"
                 class="img wow zoomIn zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/3__item.jpg" class="zoomOutt" data-lightbox="roadtrip"
+            <a
+              href="img/gallery/3__item.jpg"
+              class="zoomOutt"
+              data-lightbox="roadtrip"
               ><img
                 src="img/gallery/3__item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/4__item.jpg" class="zoomOutt" data-lightbox="roadtrip"
+            <a
+              href="img/gallery/4__item.jpg"
+              class="zoomOutt"
+              data-lightbox="roadtrip"
               ><img
                 src="img/gallery/4__item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/5_item.jpg" class="zoomOutt" data-lightbox="roadtrip"
+            <a
+              href="img/gallery/5_item.jpg"
+              class="zoomOutt"
+              data-lightbox="roadtrip"
               ><img
                 src="img/gallery/5_item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
             /></a>
-            <a href="img/gallery/6_item.jpg"  class="zoomOutt" data-lightbox="roadtrip"
+            <a
+              href="img/gallery/6_item.jpg"
+              class="zoomOutt"
+              data-lightbox="roadtrip"
               ><img
                 src="img/gallery/6_item.jpg"
                 alt="medicine"
                 class="img wow zoomIn"
                 data-wow-duration="2s"
-            />
-          </a>
+              />
+            </a>
           </div>
         </div>
         <!--/.container-->
@@ -663,7 +677,9 @@
           >
             <img src="img/our__team/1_item.jpg" alt="doctor" class="img" />
             <div class="team__contact">
-              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+              <a href="mailto:CarePoint@test.com"
+                ><i class="fas fa-envelope"></i
+              ></a>
             </div>
             <h4>Dr. Ricky Doe</h4>
             <p>Assistant Surgeon</p>
@@ -682,7 +698,9 @@
           >
             <img src="img/our__team/2_item.jpg" alt="doctor" class="img" />
             <div class="team__contact">
-              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+              <a href="mailto:CarePoint@test.com"
+                ><i class="fas fa-envelope"></i
+              ></a>
             </div>
             <h4>Dr. Joan Smit</h4>
             <p>Surgeon</p>
@@ -701,7 +719,9 @@
           >
             <img src="img/our__team/3_item.jpg" alt="doctor" class="img" />
             <div class="team__contact">
-              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+              <a href="mailto:CarePoint@test.com"
+                ><i class="fas fa-envelope"></i
+              ></a>
             </div>
             <h4>Dr. Alan Bruk</h4>
             <p>Dentist</p>
@@ -720,7 +740,9 @@
           >
             <img src="img/our__team/4_item.jpg" alt="doctor" class="img" />
             <div class="team__contact">
-              <a href="mailto:CarePoint@test.com"><i class="fas fa-envelope"></i></a>
+              <a href="mailto:CarePoint@test.com"
+                ><i class="fas fa-envelope"></i
+              ></a>
             </div>
             <h4>Dr. Tom Hil</h4>
             <p>Assistant Dentist</p>
@@ -749,7 +771,7 @@
             New Patient Special Offer Complimentary Consultation
           </p>
           <a
-            href="#"
+            href="src/about.html"
             class="btn wow fadeInRight"
             data-wow-duration="3s"
             data-wow-offset="50"
@@ -805,27 +827,27 @@
               <h5>Quick Links</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Home</a>
+                <a href="#intro" class="cat__scroll">Home</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">About</a>
+                <a href="#weWork" class="cat__scroll">About</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Services</a>
+                <a href="#ourServices" class="cat__scroll">Services</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Gallery</a>
+                <a href="#gallery" class="cat__scroll">Gallery</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Team</a>
+                <a href="#team" class="cat__scroll">Team</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Contact</a>
+                <a href="#footer" class="cat__scroll">Contact</a>
               </div>
             </div>
             <!--/.footer__colum-->
@@ -837,27 +859,27 @@
               <h5>Our Services</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Work Injuries</a>
+                <a href="src/services.html">Work Injuries</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Sport Injuries</a>
+                <a href="src/services.html">Sport Injuries</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Cold Laser Therapy</a>
+                <a href="src/services.html">Cold Laser Therapy</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Massage Therapy</a>
+                <a href="src/services.html">Massage Therapy</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Physiotherapy</a>
+                <a href="src/services.html">Physiotherapy</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#">Chiropratic Therapy</a>
+                <a href="src/services.html">Chiropratic Therapy</a>
               </div>
             </div>
             <!--/.footer__colum-->
@@ -924,7 +946,7 @@
       <span></span>
     </div>
     <!--jQuery-->
-    <script type="text/javascript" src="js/vendor/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/vendor/jquery-3.4.1.min.js"></script>
     <!--wow animation https://wowjs.uk/ -->
     <script type="text/javascript" src="js/vendor/wow.min.js"></script>
     <!--use wow animation-->
@@ -953,7 +975,9 @@
     <script type="text/javascript" src="js/block/acardeon.js"></script>
     <!--use script back__top-->
     <script type="text/javascript" src="js/block/back__top.js"></script>
-     <!--use script fixed__header-->
-     <script type="text/javascript" src="js/block/fixed__header.js"></script>
+    <!--use script fixed__header-->
+    <script type="text/javascript" src="js/block/fixed__header.js"></script>
+    <!--use script cat__scroll-->
+    <script type="text/javascript" src="js/block/cat__scroll.js"></script>
   </body>
 </html>
