create burger button

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             </div>
           </div>
           <!--/.header__content-->
+          <!--burger button-->
+          <div class="burger__button" id="burgerToggle">
+            <span class="burger__icon"></span>
+            <span class="burger__icon"></span>
+            <span class="burger__icon"></span>
+            <span class="burger__icon"></span>
+          </div>
         </div>
         <!--/.header__top-->
         <!--nav menu-->
@@ -979,5 +986,7 @@
     <script type="text/javascript" src="js/block/fixed__header.js"></script>
     <!--use script cat__scroll-->
     <script type="text/javascript" src="js/block/cat__scroll.js"></script>
+    <!--use script burgerToggle-->
+    <script type="text/javascript" src="js/block/burgerToggle.js"></script>
   </body>
 </html>
