create mobile menu

--- a/index.html
+++ b/index.html
@@ -131,6 +131,89 @@
         </nav>
       </div>
       <!--/.container-->
+      <!--mobile menu-->
+      <div class="mobile__menu">
+        <div class="container">
+          <!--nav mobile menu-->
+          <nav class="nav__bar--mobile">
+            <div class="header__content--mobile">
+              <div class="content__item">
+                <span><i class="far fa-clock"></i></span>
+                <div class="item__text">
+                  <h4>work time: 09:00 &ndash; 17:00</h4>
+                  <p>Saturday and Sunday &ndash; CLOSED</p>
+                </div>
+              </div>
+              <div class="content__item">
+                <span><i class="fas fa-envelope"></i></span>
+                <div class="item__text">
+                  <h4>Mail Us</h4>
+                  <a href="mailto:care_point@mail.com"
+                    ><p>care_point@mail.com</p></a
+                  >
+                </div>
+              </div>
+              <div class="content__item">
+                <span><i class="fas fa-tablet-alt"></i></span>
+                <div class="item__text">
+                  <h4>call us</h4>
+                  <a href="tel:+12345678900"><p>+123 4567 8900</p></a>
+                </div>
+              </div>
+            </div>
+            <!--/.header__content-->
+            <!--nav mobile menu-->
+            <ul class="nav__menu">
+              <li class="nav__item">
+                <a href="index.html" class="nav__link">Home</a>
+              </li>
+              <li class="nav__item">
+                <a href="src/about.html" class="nav__link">About</a>
+              </li>
+              <li class="nav__item">
+                <a href="src/services.html" class="nav__link">Services</a>
+              </li>
+              <li class="nav__item">
+                <a href="src/gallery.html" class="nav__link">Gallery</a>
+              </li>
+              <li class="nav__item">
+                <a href="src/team.html" class="nav__link">Team</a>
+              </li>
+              <li class="nav__item">
+                <a href="src/contact.html" class="nav__link">Contact Us</a>
+              </li>
+            </ul>
+          </nav>
+          <!--socail mobile-->
+          <ul class="social__menu">
+            <li class="social__item">
+              <a href="#" class="social__link" target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link" target="_blank"
+                ><i class="fab fa-google-plus"></i
+              ></a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link" target="_blank"
+                ><i class="fab fa-vk"></i
+              ></a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link" target="_blank"
+                ><i class="fab fa-youtube"></i
+              ></a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link" target="_blank"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
     <!--intro section-->
     <section id="intro">
