fixed semantic html

--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
     <meta name="google" content="notranslate" />
     <meta name="author" content="dt_developer" />
     <meta name="robots" content="index, follow" />
-    <!--google fonts-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Raleway:400,600,700&display=swap&subset=latin-ext"
-      rel="stylesheet"
-    />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -463,7 +458,7 @@
                   voluptatem accusantium doloremque laudantium.</span
                 >
               </div>
-              <!--/.colum__left--colum-->
+              <!--/.colum__left colum-->
               <div class="colum__left--colum text__left">
                 <img
                   src="img/we__work/2_colum.jpg"
@@ -487,9 +482,9 @@
                   voluptatem accusantium doloremque laudantium.</span
                 >
               </div>
-              <!--/.colum__left--colum-->
+              <!--/.colum__left colum-->
             </div>
-            <!--/.colum__left--content-->
+            <!--/.colum__left content-->
             <div
               class="text__center mt-4 wow fadeIn"
               data-wow-duration="5s"
@@ -1021,7 +1016,7 @@
         <div class="footer__copyright wow fadeIn" data-wow-duration="3s">
           <p>
             Copyright &copy; CarePoint 2019 &mdash;
-            <script type="text/javascript">
+            <script>
               "use script";
               document.write(new Date().getFullYear());
             </script>
@@ -1036,11 +1031,11 @@
       <span></span>
     </div>
     <!--jQuery-->
-    <script type="text/javascript" src="js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="js/vendor/jquery-3.4.1.min.js"></script>
     <!--wow animation https://wowjs.uk/ -->
-    <script type="text/javascript" src="js/vendor/wow.min.js"></script>
+    <script src="js/vendor/wow.min.js"></script>
     <!--use wow animation-->
-    <script type="text/javascript">
+    <script>
       wow = new WOW({
         boxClass: "wow", // default
         animateClass: "animated", // default
@@ -1051,25 +1046,25 @@
       wow.init();
     </script>
     <!--use data-lightbox plugin for gallery https://lokeshdhakar.com/projects/lightbox2/ -->
-    <script type="text/javascript" src="js/vendor/lightbox.min.js"></script>
+    <script src="js/vendor/lightbox.min.js"></script>
     <!--main script to page-->
     <!--use script progress__bar-->
-    <script type="text/javascript" src="js/block/progress__bar.js"></script>
-    <!--use script add class nav__link--active-->
-    <script type="text/javascript" src="js/block/nav__link.js"></script>
+    <script src="js/block/progress__bar.js"></script>
+    <!--use script add class nav__link active-->
+    <script src="js/block/nav__link.js"></script>
     <!--use script counter to best feature block-->
-    <script type="text/javascript" src="js/block/feature.js"></script>
+    <script src="js/block/feature.js"></script>
     <!--use script show more coment to we work block-->
-    <script type="text/javascript" src="js/block/show__more.js"></script>
+    <script src="js/block/show__more.js"></script>
     <!--use script acardeon-->
-    <script type="text/javascript" src="js/block/acardeon.js"></script>
+    <script src="js/block/acardeon.js"></script>
     <!--use script back__top-->
-    <script type="text/javascript" src="js/block/back__top.js"></script>
+    <script src="js/block/back__top.js"></script>
     <!--use script fixed__header-->
-    <script type="text/javascript" src="js/block/fixed__header.js"></script>
+    <script src="js/block/fixed__header.js"></script>
     <!--use script cat__scroll-->
-    <script type="text/javascript" src="js/block/cat__scroll.js"></script>
+    <script src="js/block/cat__scroll.js"></script>
     <!--use script burgerToggle-->
-    <script type="text/javascript" src="js/block/burgerToggle.js"></script>
+    <script src="js/block/burgerToggle.js"></script>
   </body>
 </html>
