create page about

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <nav class="nav__bar">
           <ul class="nav__menu">
             <li class="nav__item">
-              <a href="index.html" class="nav__link">Home</a>
+              <a href="index.html" class="nav__link nav__link--active">Home</a>
             </li>
             <li class="nav__item">
               <a href="src/about.html" class="nav__link">About</a>
@@ -1050,8 +1050,6 @@
     <!--main script to page-->
     <!--use script progress__bar-->
     <script src="js/block/progress__bar.js"></script>
-    <!--use script add class nav__link active-->
-    <script src="js/block/nav__link.js"></script>
     <!--use script counter to best feature block-->
     <script src="js/block/feature.js"></script>
     <!--use script show more coment to we work block-->
