create gallery page

--- a/src/services.html
+++ b/src/services.html
@@ -475,27 +475,27 @@
               <h5>Quick Links</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#intro" class="cat__scroll">Home</a>
+                <a href="../index.html">Home</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#weWork" class="cat__scroll">About</a>
+                <a href="../src/about.html">About</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#ourServices" class="cat__scroll">Services</a>
+                <a href="../src/services.html">Services</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#gallery" class="cat__scroll">Gallery</a>
+                <a href="../src/gallery.html">Gallery</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#team" class="cat__scroll">Team</a>
+                <a href="../src/team.html">Team</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="#footer" class="cat__scroll">Contact</a>
+                <a href="../src/contact.html">Contact</a>
               </div>
             </div>
             <!--/.footer__colum-->
@@ -507,27 +507,27 @@
               <h5>Our Services</h5>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="src/services.html">Work Injuries</a>
+                <a href="../src/services.html">Work Injuries</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="src/services.html">Sport Injuries</a>
+                <a href="../src/services.html">Sport Injuries</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="src/services.html">Cold Laser Therapy</a>
+                <a href="../src/services.html">Cold Laser Therapy</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="src/services.html">Massage Therapy</a>
+                <a href="../src/services.html">Massage Therapy</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="src/services.html">Physiotherapy</a>
+                <a href="../src/services.html">Physiotherapy</a>
               </div>
               <div class="colum__links">
                 <i class="fas fa-caret-right"></i>
-                <a href="src/services.html">Chiropratic Therapy</a>
+                <a href="../src/services.html">Chiropratic Therapy</a>
               </div>
             </div>
             <!--/.footer__colum-->
