create page team

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -229,7 +229,7 @@
               <h1 class="intro__title">
                 Gallery
               </h1>
-              <h2 class="intro__subtitle">
+              <h2 class="intro__subtitle text__bold">
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium.
               </h2>
