--- a/src/team.html
+++ b/src/team.html
@@ -215,7 +215,7 @@
       <div class="intro__content">
         <div class="intro__bg">
           <img
-            src="../img/intro/team__bg.jpg"
+            src="../img/intro/services__bg.jpg"
             alt="intro background"
             class="img wow fadeIn"
             data-wow-duration="3s"
