create contact form to page contact

--- a/src/contact.html
+++ b/src/contact.html
@@ -299,7 +299,7 @@
     <section id="contactForm">
       <div class="container">
         <div class="contact__content">
-          <div class="form__colum">
+          <div class="contact__form__colum">
             <div class="form__hader text__left">
               <h2>Contact Form</h2>
               <h3>
