--- a/src/contact.html
+++ b/src/contact.html
@@ -299,7 +299,7 @@
     <section id="contactForm">
       <div class="container">
         <div class="contact__content">
-          <div class="contact__form__colum">
+          <div class="contact__form__colum wow fadeInLeft" data-wow-duration="3s" data-wow-offset="50">
             <div class="form__hader text__left">
               <h2>Contact Form</h2>
               <h3>
@@ -320,7 +320,7 @@
               </button>
             </form>
           </div>
-          <div class="location__colum">
+          <div class="location__colum wow fadeInRight" data-wow-duration="3s" data-wow-offset="50">
             <div class="location__content">
               <span><i class="fas fa-map-marker-alt"></i></span>
               <div class="location__text">
@@ -333,22 +333,32 @@
               <span><i class="fas fa-phone"></i></span>
               <div class="location__text">
                 <h4>Phone Number</h4>
-                <p>123, Main Road, New City,</p>
-                <p>My Country 123456</p>
+                <p>+123 456 789</p>
+                <p>+987 654 321</p>
               </div>
             </div>
             <div class="location__content">
               <span><i class="fas fa-envelope"></i></span>
               <div class="location__text">
                 <h4>Email</h4>
-                <p>123, Main Road, New City,</p>
-                <p>My Country 123456</p>
+                <p>carePoint@mail.com</p>
+                <p>company@mail.com</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!--map block-->
+    <div class="map__block wow fadeIn" id="mapBlock" data-wow-duration="3s">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d738150.7441615632!2d-80.01811945392507!3d43.72298875680076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2z0KLQvtGA0L7QvdGC0L4sINCe0L3RgtCw0YDRltC-LCDQmtCw0L3QsNC00LA!5e0!3m2!1suk!2sua!4v1581505727308!5m2!1suk!2sua"
+        width="100%"
+        height="450"
+        frameborder="0"
+        allowfullscreen="true"
+      ></iframe>
+    </div>
     <!--Quick action block-->
     <div
       class="action__bg wow fadeIn"
