add php script send form

--- a/src/contact.html
+++ b/src/contact.html
@@ -307,14 +307,14 @@
                 Laborum, perspiciatis.
               </h3>
             </div>
-            <form method="GET" action="mail.php" class="form__send">
-              <input type="text" name="text" id="Name" placeholder="Name" />
-              <input type="tel" name="phone" id="Phone" placeholder="Phone" />
+            <form method="POST" action="../php/form.php" class="form__send">
+              <input type="text" name="text" id="Name" placeholder="Name" required/>
+              <input type="tel" name="phone" id="Phone" placeholder="Phone" required/>
               <textarea
                 name="message"
                 id="Message"
                 placeholder="Message"
-              ></textarea>
+              required></textarea>
               <button type="submit" class="btn btn--submit" id="Submit">
                 submit
               </button>
@@ -485,25 +485,25 @@
             <!--/.footer__colum-->
             <!--footer__form-->
             <form
-              method="GET"
-              action="mail.php"
+              method="POST"
+              action="../php/form.php"
               class="footer__colum form__colum wow fadeInRight"
               data-wow-offset="50"
               data-wow-duration="3s"
             >
               <h5>Contact Form</h5>
-              <input type="text" name="text" id="formName" placeholder="Name" />
+              <input type="text" name="text" id="formName" placeholder="Name" required/>
               <input
                 type="tel"
                 name="phone"
                 id="formPhone"
                 placeholder="Phone"
-              />
+              required/>
               <textarea
                 name="message"
                 id="formMessage"
                 placeholder="Message"
-              ></textarea>
+              required></textarea>
               <button type="submit" class="btn btn--submit" id="formSubmit">
                 submit
               </button>
