create media to best feature block

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             class="us__colum us__colum--img wow fadeIn"
             data-wow-duration="3s"
           >
-            <img src="img/choose__us/people_bg.jpg" alt="doctor" />
+            <img src="img/choose__us/people_bg.jpg" alt="doctor" class="img"/>
           </div>
           <div
             class="us__colum wow fadeInRight"
