add media to footer section

--- a/src/contact.html
+++ b/src/contact.html
@@ -452,7 +452,7 @@
             </div>
             <!--/.footer__colum-->
             <div
-              class="footer__colum wow fadeInUp"
+              class="footer__colum footer__colum--services wow fadeInUp"
               data-wow-offset="50"
               data-wow-duration="3s"
             >
