--- a/index.html
+++ b/index.html
@@ -971,25 +971,24 @@
             <!--footer__form-->
             <form
               method="POST"
-              action="php/form.php"
               class="footer__colum form__colum wow fadeInRight"
               data-wow-offset="50"
               data-wow-duration="3s"
               id="feedback"
             >
               <h5>Contact Form</h5>
-              <input type="text" name="name" id="formName" placeholder="Name" required/>
+              <input type="text" name="name" id="formName" placeholder="Name"/>
               <input
                 type="email"
                 name="email"
                 id="formEmail"
                 placeholder="Your E-mail"
-              required/>
+              />
               <textarea
                 name="message"
                 id="formMessage"
                 placeholder="Message"
-              required></textarea>
+              ></textarea>
               <button type="submit" class="btn btn--submit" id="formSubmit">
                 submit
               </button>
